# xbase

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  dev.md  env
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  cliff.toml  daily.yml  release.yml  todos.yml
client/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
client/src/: broadcast.rs  build.rs  lib.rs  nvim.rs  register.rs  runtime.rs
client/src/neovim/: mod.rs  state.rs
client/src/nvim/: broadcast.rs  export.rs  global.rs  handler.rs  log.rs  mod.rs  notify.rs  state.rs
core/: command.rs  daemon.rs  lib.rs  project.rs  state.rs  workspace.rs  xcode.rs
core/command/: register.rs  rename_file.rs  run.rs  unregister.rs
core/xcode/: compilation.rs
crates/daemon/src/: client.rs  lib.rs  main.rs  state.rs  store.rs
crates/daemon/src/compile/: mod.rs
crates/daemon/src/daemon/: message.rs  mod.rs  requests.rs
crates/lualib/: Cargo.toml
crates/proto/src/: lib.rs  message.rs  types.rs  util.rs
crates/sourcekit-helper/: Cargo.toml
crates/sourcekit-helper/src/: main.rs  tracing_setup.rs
crates/sourcekit/src/: helpers.rs
daemon/: Cargo.toml
daemon/src/: broadcast.rs  build.rs  compile.rs  constants.rs  device.rs  drop.rs  error.rs  lib.rs  logger.rs  main.rs  nvim.rs  register.rs  run.rs  state.rs  store.rs  xcodegen.rs
daemon/src/nvim/: logger.rs
daemon/src/project/: barebone.rs  generator.rs  mod.rs  platform.rs  swift.rs  tuist.rs  xcodegen.rs
daemon/src/run/: bin.rs  handler.rs  medium.rs  service.rs  simulator.rs
daemon/src/store/: broadcast.rs  clients.rs  devices.rs  loggers.rs  projects.rs  watcher.rs
daemon/src/store/projects/: mod.rs
daemon/src/types/: device.rs  mod.rs  project.rs
daemon/src/types/project/: dependency.rs  package.rs  target.rs  target_type.rs
daemon/src/util/: fmt.rs  fs.rs  mod.rs  pid.rs
daemon/src/watch/: event.rs  interface.rs  mod.rs  serialize.rs  state.rs
editor/: Cargo.toml
editor/src/: extension.rs  lib.rs  runtime.rs
editor/src/neovim/: extensions.rs  global.rs  listener.rs  logger.rs  mod.rs  state.rs
log/: Cargo.toml
log/src/: lib.rs
lsp/: Cargo.toml
lua/iCode/: config.lua  init.lua
lua/xbase/: Cargo.toml  broadcast.lua  config.lua  constants.lua  init.lua  lib.rs  log.lua  logger.lua  notify.lua  null_ls.lua  pickers.lua  server.lua  socket.lua  state.lua  statusline.lua  treesitter.lua  types.lua  util.lua  watch.lua
lua/xbase/pickers/: builtin.lua  telescope.lua  util.lua
lua/xcodebase/: Cargo.toml  config.lua  init.lua  lib.rs  log.lua  pickers.lua  state.lua  watch.lua
lualib/: Cargo.toml
lualib/src/: extension.rs  lib.rs
nvim/: Cargo.toml
nvim/src/: extensions.rs  lib.rs  tables.rs
pkgs/daemon/: Cargo.toml
pkgs/daemon/src/: main.rs
proto/: Cargo.toml
proto/src/: error.rs  lib.rs  logging.rs  message.rs  request.rs  types.rs  util.rs
scripts/: gendocs  gendocs.lua  minimal_init.vim
shared/: Cargo.toml
shared/src/: command.rs  constants.rs  fs.rs  lib.rs  project.rs  server.rs  state.rs  tracing.rs  watch.rs  workspace.rs  xcode.rs
shared/src/command/: build.rs  rename_file.rs  run.rs
sourcekit/: Cargo.toml
sourcekit/src/: extensions.rs  main.rs
src/: broadcast.rs  client.rs  command.rs  compile.rs  constants.rs  daemon.rs  error.rs  lib.rs  main.rs  nvim.rs  run.rs  runner.rs  server.rs  state.rs  types.rs  watch.rs  workspace.rs  xcode.rs  xcodegen.rs
src/broadcast/: helpers.rs  logger.rs  message.rs  mod.rs  task.rs
src/command/: drop.rs  register.rs  run.rs
src/compile/: command.rs  flags.rs  mod.rs
src/daemon/: bin.rs  client.rs  command.rs  message.rs  mod.rs  nvim.rs  requests.rs  workspace.rs
src/daemon/command/: build.rs  drop.rs  register.rs  rename_file.rs  run.rs
src/daemon/requests/: build.rs  drop.rs  project_info.rs  register.rs  rename_file.rs  run.rs  watch_start.rs  watch_stop.rs  watch_target.rs
src/daemon/state/: mod.rs  project.rs  workspace.rs
src/nvim/: buffer.rs  client.rs  logbuffer.rs  logger.rs  mod.rs  prelude.rs  watchlogger.rs
src/project/: barebone.rs  mod.rs  swift.rs  tuist.rs  xcodegen.rs
src/run/: bin.rs  handler.rs  meduim.rs  service.rs  simulator.rs
src/runner/: bin.rs  device.rs  handler.rs  macos.rs  mod.rs  service.rs  simctl.rs  simulator.rs
src/runtime/: message.rs  mod.rs
src/server/: bin.rs  build.rs  drop.rs  extensions.rs  mod.rs  project_info.rs  register.rs  request.rs  response.rs  run.rs  runners.rs  state.rs  stream.rs
src/server/methods/: build.rs  drop.rs  mod.rs  project_info.rs  register.rs  run.rs  runners.rs  targets.rs
src/state/: daemon.rs  mod.rs  nvim.rs  project.rs  server.rs  util.rs  workspace.rs
src/store/: clients.rs  devices.rs  mod.rs  projects.rs  simdevices.rs  watcher.rs
src/types/: build.rs  client.rs  device.rs  mod.rs  project.rs  simdevice.rs
src/types/project/: config.rs  options.rs  platform.rs  target.rs  target_type.rs
src/util/: extensions.rs  fmt.rs  fs.rs  mlua.rs  mod.rs  pid.rs  proc.rs  process.rs  regex.rs  serde.rs  tracing.rs  tracing_setup.rs  watch.rs
src/watch/: event.rs  mod.rs
src/watcher/: error.rs  event.rs  handle.rs  interface.rs  mod.rs  state.rs
src/watcher/handle/: project.rs  target.rs
src/watchers/: mod.rs  project.rs  targets.rs
src/xcode/: actions.rs  compilation.rs  mod.rs
src/xcode/compilation/: command.rs
src/xcodegen/: mod.rs
syntax/: xclog.vim  xcodebuildlog.vim
tracing/: Cargo.toml
tracing/src/: lib.rs
vscode/: .eslintrc.yml  .vscodeignore  package.json  pnpm-lock.yaml  tsup.config.ts
vscode/src/: broadcast.ts  commands.ts  constants.ts  index.ts  server.ts  state.ts  types.ts  util.ts  workspaceContext.ts
vscode/src/ui/: output.ts
vscode/syntax/: xclog.tmLanguage.json
vscode/test/: index.test.ts  server.test.ts
vscode/xbase/: broadcast.ts  commands.ts  config.ts  folderContext.ts  init.ts  server.ts  types.ts  util.ts  workspaceContext.ts
vscode/xbase/sourcekit-lsp/: index.ts
vscode/xbase/ui/: logger.ts  outputChannel.ts  statusline.ts
(+25 files in other folders)
