[package]
name = "xbase"
version = "0.1.2"
edition = "2021"

[features]
default     = [ ]
xcodegen    = [ "async", "dirs" ]
daemon      = [
  "serial",
  "compilation",
  "async",
  "watcher",
  "proc",
  "xcodegen",
  "parity-tokio-ipc",
  "nvim-rs",
  "simctl",
  "process-stream",
  "futures",
  "xclog"
  ]
lua         = [ "mlua", "serial", "simctl", "lazy_static" ]
serial      = [ "serde", "serde_json", "serde_yaml" ]
compilation = [ "serial", "lazy_static", "shell-words", "xcode" ]
async       = [ "tokio", "async-trait", "async-stream" ]
proc        = [ "libproc" ]
watcher     = [ "dirs", "notify", "wax" ]
xcode       = [ "xclog" ]

[lib]
name = "xbase"
path = "src/lib.rs"

[workspace]
members = [
  "lua/xbase",
  "crates/*",
]

[[bin]]
name = "xbase-daemon"
path = "src/daemon/bin.rs"
required-features = ["daemon"]

[dependencies]
# Error Handling
anyhow                = "^1.0.42"
# suffix-position pipeline
tap                   = "1.0.1"
# Serialization Feature
serde                 = { version = "1.0",    features = ["derive"], optional = true }
serde_json            = { version = "1.0.79", optional = true }
serde_yaml            = { version = "0.8.23", optional = true }
strum                 = { version = "0.24.0",  features = ["derive"] }
# Async Runtime Feature
tokio                 = { version = "1.17.0", features = ["full"], optional = true }
tokio-util            = { version = "0.7.1",  features = ["codec"], optional = true }
async-trait           = { version = "0.1.52", optional = true }
async-stream          = { version = "0.3.3", optional = true }
process-stream        = { version = "0.2.*", optional = true }

# Logging Feature
tracing               = { path = "./crates/tracing/" }

# Filesystem watcher
notify                = { version = "5.0.0-pre.13", optional = true }
dirs                  = { version = "4.0",    optional = true }
wax                   = { version = "0.4.0",  optional = true }
# Build Logs/Command Compilation feature
lazy_static           = { version = "1.4.0",  optional = true }
shell-words           = { version  = "1.1.0", optional = true }
# Other
mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true }
xclog                 = { version  = "0.2.*",  optional = true, features = ["with_tracing"] }


# Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
libproc               = { version = "0.12.0", optional = true }
url                   = { version = "2.2.2",  features = ["serde"], optional = true }
nvim-rs               = { version = "0.4.0", optional = true, features = ["use_tokio"] }
parity-tokio-ipc      = { version = "0.9.0", optional = true }
simctl                = { git = "https://github.com/tami5/simctl", optional = true }
futures               = { version = "0.3.21", optional = true }
thiserror             = "1.0.31"
libc                  = "0.2.126"
derive-deref-rs       = "0.1.1"
crossbeam-channel     = { version = "0.5.4", optional = true }
