[package]
name = "xbase-client"
version = "0.2.0"
edition = "2021"
description = "XBase Editor editor library"

[lib]
crate-type = ["cdylib"]

[dependencies]
# FFI framework
safer-ffi       = { version = "0.0.10", features = [ "derives" ] }

# Libraries
derive-deref-rs = "0.1.1"
once_cell       = "1.12.0"
tap             = "1.0.1"
wax             = "0.5.0"
os_pipe         = "1.0.1"

# Serialization/Deserilization
serde           = { version = "1.0.137", features = ["derive"] }
serde_json      = "1.0.81"

# RPC and Runtime
tokio           = { version = "1.19.2", features = ["net", "rt-multi-thread", "sync", "parking_lot"] }
tarpc           = { version = "0.29.0" }

# XBase Protocol
xbase-proto     = { path = "../proto/", features = ["lib"] }
# Ony for PBXTargetPlatform type (todo: just pass strings)
xcodeproj       = "0.2.12"

[features]
c-headers = [ "safer-ffi/headers" ]
