[package]
name = "xbase"
version = "0.2.0"
edition = "2021"

[dependencies]

# Internal
log                   = { path = "./../log/" }
xbase-proto           = { path = "./../proto/", features = ["server"] }

# Error Handling
anyhow                = { version = "^1.0.58" }
thiserror             = { version = "1.0.31" }

# Serialization Feature
serde                 = { version = "1.0",    features = ["derive"] }
serde_json            = { version = "1.0.79" }
serde_yaml            = { version = "0.8.23" }
strum                 = { version = "0.24.0",  features = ["derive"] }

# Async Runtime Feature
tokio                 = { version = "1.19.2", features = ["full"] }
futures               = { version = "0.3.21" }
async-trait           = { version = "0.1.52" }
async-stream          = { version = "0.3.3" }
parity-tokio-ipc      = { version = "0.9.0" }
process-stream        = { version = "0.4.*", features = ["serde"] }
xcodeproj             = { version = "0.2.*" }

# Filesystem watcher
notify                = { version = "5.0.0-pre.13" }
dirs                  = { version = "4.0" }
wax                   = { version = "0.5.0" }

# Static
lazy_static           = { version = "1.4.0" }

# Nvim
nvim-rs               = { version = "0.4.0", features = ["use_tokio"] }

# Other
tap                   = "1.0.1"
xclog                 = { version  = "0.3.*",  features = ["with_tracing"] }
simctl                = { git = "https://github.com/xbase-lab/simctl" }
derive-deref-rs       = { version = "0.1.1"}
shell-words           = { version  = "1.1.0" }

# Unix Api
libc                  = { version = "0.2.126"}
libproc               = { version = "0.12.0" }
paste = "1.0.7"
which = "4.2.5"
erased-serde = "0.3.21"
tarpc = { version = "0.29.0", features = ["serde-transport", "tokio1", "serde1"] }
linemux = "0.2.3"

[dev-dependencies]
tracing-test = "0.2.2"
