[package]
name = "xbase-editor-lib"
version = "0.2.0"
edition = "2021"
description = "XBase Editor neovim editor library"

[lib]
crate-type = ["cdylib"]

[dependencies]
tarpc           = { version = "0.29.0" }
xbase-proto     = { path = "../proto/", features = ["neovim"] }
serde_json      = "1.0.81"
mlua            = { version = "0.8.0", features = ["luajit", "module", "vendored", "send", "serialize", "async", "macros"]  }
tap             = "1.0.1"
tokio           = { version = "1.19.2", features = ["net", "rt-multi-thread"] }
once_cell = "1.12.0"
