[package]
name = "xbase-editor-lib"
version = "0.2.0"
edition = "2021"
description = "XBase Editor editor library"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Libraries
tap             = "1.0.1"
once_cell = "1.12.0"
serde_json      = "1.0.81"

# RPC & Runtime
tokio           = { version = "1.19.2", features = ["net", "rt-multi-thread", "sync", "parking_lot"] }
tarpc           = { version = "0.29.0" }
xbase-proto     = { path = "../proto/", features = ["neovim"] }
mlua            = { version = "0.8.0", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"] }
async-trait = "0.1.56"
serde = { version = "1.0.137", features = ["derive"] }
linemux = "0.2.3"
process-stream = { version = "0.4.1", features = ["serde"] }

