[package]
name = "xbase-lualib"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
xbase-proto     = { path = "../proto/" }
serde_json      = "1.0.81"
mlua            = { version = "0.8.0", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"]  }
tap             = "1.0.1"
lazy_static     = "1.4.0"
