[package]
name = "xbase-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait  = "0.1.56"
paste        = "1.0.7"
serde        = { version  = "1", features = ["derive"]  }
serde_json   = "1"
strum        = { version = "0.24.0",  features = ["derive"] }
log          = { path = "../log/" }
