[package]
name = "xbase-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait  = "0.1.56"
paste        = "1.0.7"
serde        = { version  = "1", features = ["derive"]  }
serde_json   = "1"
strum        = { version = "0.24.0",  features = ["derive"] }
log          = { path = "../log/" }
tarpc        = { version = "0.29.0", features = ["serde-transport", "tokio1", "serde1"] }
# tokio        = { version = "1.19.2", features = ["macros", "net"]}
futures      = "0.3"
anyhow       = "1.0"
thiserror    = "1.0.31"
which        = { version = "4.2.5", optional = true }
notify       = { version = "4.0.17", optional = true }
nvim-rs      = { version = "0.4.0", features = ["use_tokio"], optional = true }
simctl       = { git = "https://github.com/xbase-lab/simctl", optional = true }
tokio-serde  = { version = "0.8.0", features = ["bincode", "json"] }
tokio-util   = { version = "0.6.9",  features = ["codec"] }
mlua         = { version = "0.8.0", optional = true  }
process-stream = { version = "0.4.*", features = ["serde"] }
tokio    = { version = "1.19.2" }
linemux = {version = "0.2.3", optional = true}

[features]
default = []
server = [ "which", "notify", "nvim-rs", "simctl"]
client = [ ]
neovim = [ "client", "mlua", "linemux" ]
