[package]
name = "xbase-sourcekit-helper"
version = "0.2.0"
edition = "2021"
description = "sourcekit helper that provide build-server sourcekit can use to provide autocompletion and file navigation"
license = "MIT OR Apache-2.0"

[dependencies]
xclog                 = "0.2.*"
serde                 = {version = "1.0.137", features = ["derive"]}
bsp-server            = "0.1.*"
# TODO(sourcekit-helper): remove dirs crate
dirs                  = "4.0"
once_cell             = "1.12.0"
serde_json            = "1.0.81"
anyhow                = "1.0.58"
log               = { path = "../log/" }
tap                   = "1.0.1"
