[package]
name = "tracing"

version = "0.1.0"
edition = "2021"
description = "Re-export of tracing setup with helper method"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror             = "1.0.31"
tracing               = "0.1.32"
tracing-attributes    = "0.1.21"
tracing-appender      = "0.2.1"
tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"]  }
