[package]
name = "xbase-sourcekit-helper"
version = "0.3.0"
edition = "2021"
description = "sourcekit helper that provide build-server sourcekit can use to provide autocompletion and file navigation"
license = "MIT OR Apache-2.0"

[dependencies]
xclog                 = "0.3.*"
serde                 = {version = "1.0.140", features = ["derive"]}
bsp-server            = "0.1.*"
dirs                  = "4.0"
once_cell             = "1.13.0"
serde_json            = "1.0.81"
anyhow                = "1.0.58"
tap                   = "1.0.1"

# Logging
tracing               = { version = "0.1.36" }
tracing-attributes    = { version = "0.1.22" }
tracing-appender      = { version = "0.2.1"  }
tracing-subscriber    = { version = "0.3.15",  features = ["env-filter"]  }
