[package]
name = "libxbase"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
xbase = { path = "../../", features = [ "lua" ] }
mlua = { version = "0.7.4", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"]  }
serde_json = "1.0.81"
